...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.081"
            app:srcCompat="@drawable/add_foreground" />

        <ImageButton
            android:id="@+id/manageBreed"
            android:layout_width="48dp"
            android:layout_height="51dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="156dp"
            android:backgroundTint="#FBF6F6"
            app:layout_constraintBottom_toBottomOf="parent"
...
            android:layout_height="match_parent"
            android:divider="@drawable/spaceline"
            android:orientation="vertical"
            android:showDividers="middle">

            <EditText
                android:id="@+id/breedName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shapes"
                android:ems="10"
                android:hint="Breed Name"
                android:inputType="textPersonName"
...
                android:layout_height="wrap_content"
                android:divider="@drawable/spaceline"
                android:orientation="horizontal"
                android:showDividers="middle">

                <EditText
                    android:id="@+id/hno"
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:background="@drawable/shapes"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/height"
...
                    app:layout_constraintHorizontal_bias="0.064"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.394" />

                <EditText
                    android:id="@+id/wno"
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:background="@drawable/shapes"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/weight"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.394" />

                <EditText
                    android:id="@+id/lsno"
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:background="@drawable/shapes"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/life_span"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.394" />
            </LinearLayout>

            <EditText
                android:id="@+id/adapget"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shapes"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/adap"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/adpanel"
                app:layout_constraintVertical_bias="0.0" />


            <EditText
                android:id="@+id/intelget"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shapes"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/intel"
...
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/adpanel"
                app:layout_constraintVertical_bias="0.195" />

            <EditText
                android:id="@+id/feedget"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shapes"
                android:ems="10"
                android:gravity="start|center"
                android:hint="@string/feed"
...
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/adpanel"
                app:layout_constraintVertical_bias="0.39" />

            <EditText
                android:id="@+id/healget"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shapes"
                android:ems="10"
                android:gravity="start|center"
                android:hint="Health"
...
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/adpanel"
                app:layout_constraintVertical_bias="0.58" />

            <EditText
                android:id="@+id/infoLink"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/shapes"
                android:ems="10"
                android:hint="Infor Link"
                android:inputType="textPersonName"
...
                    app:layout_constraintHorizontal_bias="0.047"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.932" />

                <ImageButton
                    android:id="@+id/addImgBtn"
                    android:layout_width="69dp"
                    android:layout_height="70dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.306"
                    app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintHorizontal_bias="0.591"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.976" />

                <Button
                    android:id="@+id/saveBreed"
                    android:layout_width="83dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#2196F3"
                    android:text="Save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.911"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.976" />
...
