<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/removeBreedInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.862" />

            <TextView
                android:id="@+id/breedname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Breed Name"
                android:textColor="#0D0C0C"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
...
