<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="192dp"
        android:layout_height="184dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cherry_swash"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/reg_email"
        android:inputType="textPersonName"
        android:padding="10sp"
        app:layout_constraintBottom_toTopOf="@+id/login_password_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:hintEnabled="false"
        android:ems="10"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="10sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="@font/iceland"
        android:text="@string/login_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/new_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_holder" />

    <TextView
        android:id="@+id/new_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_new_here"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        android:background="@color/design_default_color_primary"
        android:fontFamily="@font/iceland"
        android:text="@string/login_sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_here" />

    <ProgressBar
        android:id="@+id/login_pBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progressTint="#000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>